=== master

* Make many_to_pg_array associations in the pg_array_associations plugin work on PostgreSQL 11 (jeremyevans)

* Only load strscan library in pg_array extension if it is needed (jeremyevans)

* Don't remove related many_to_one associations from cache when setting column value to existing value for model instances that have not been persisted (jeremyevans) (#1521)

* Support ruby 2.6+ endless ranges in the pg_range extension (jeremyevans)

* Support ruby 2.6+ endless ranges in filters, using just a >= operator for them (jeremyevans)

=== 5.9.0 (2018-06-01)

* Support generated columns on MySQL 5.7+ and MariaDB 5.2+ (wjordan, jeremyevans) (#1517)

* Add escaped_like extension for creation of LIKE expressions with placeholders in the pattern without access to a dataset (jeremyevans)

* Modify jdbc adapter exception handling to work around ::NativeException deprecation in JRuby 9.2 (jeremyevans)

* Work around broken BC date handling in JRuby 9.2.0.0 (jeremyevans)

* Switch use of BigDecimal.new() to BigDecimal(), since the former is deprecated (jeremyevans)

* Add Sequel::VERSION_NUMBER for easier version comparisons (jeremyevans)

* Add Model.has_dataset? to determine if the model class has a dataset (AlexWayfer) (#1508)

* Support use of LIKE with ANY function on PostgreSQL by avoiding unnecessary use of ESCAPE syntax (jeremyevans)

* Disconnect connections left allocated by dead threads instead of returning the connections to the pool (jeremyevans)

* Make both threaded connection pools avoid disconnecting connections while holding the connection pool mutex (jeremyevans)

* Don't deadlock when disconnecting connections in the sharded_threaded connection pool when using connection_validator or connection_expiration extensions (jeremyevans)

* Don't modify hash argument passed in Model.nested_attributes in the nested_attributes plugin (jeremyevans)

* Avoid unnecessary hash creation in many places (jeremyevans)
