@@ -1,5 +1,7 @@
 === master
 
+* Allow the use of IN/NOT IN operators with set returning functions for Sequel::Model datasets (jeremyevans)
+
 * Make many_to_pg_array associations in the pg_array_associations plugin work on PostgreSQL 11 (jeremyevans)
 
 * Only load strscan library in pg_array extension if it is needed (jeremyevans)
